@@ -28,10 +28,12 @@ $actionWidget->addPageHeader(_('CONFIGURATION OF ACTIONS'));
 $actionForm = new CForm();
 $actionForm->setName('action.edit');
 $actionForm->addVar('form', $this->data['form']);
-$actionForm->addVar('form_refresh', $this->data['form_refresh']);
-$actionForm->addVar('eventsource', $this->data['eventsource']);
-if (!empty($this->data['actionid'])) {
+
+if ($this->data['actionid']) {
 	$actionForm->addVar('actionid', $this->data['actionid']);
+}
+else {
+	$actionForm->addVar('eventsource', $this->data['eventsource']);
 }
 
 /*
@@ -331,7 +333,7 @@ if ($this->data['eventsource'] == EVENT_SOURCE_TRIGGERS || $this->data['eventsou
 // create operation table
 $operationsTable = new CTable(_('No operations defined.'), 'formElementTable');
 $operationsTable->attr('style', 'min-width: 600px;');
-if ($this->data['action']['eventsource'] == EVENT_SOURCE_TRIGGERS || $this->data['eventsource'] == EVENT_SOURCE_INTERNAL) {
+if ($this->data['eventsource'] == EVENT_SOURCE_TRIGGERS || $this->data['eventsource'] == EVENT_SOURCE_INTERNAL) {
 	$operationsTable->setHeader(array(_('Steps'), _('Details'), _('Start in'), _('Duration (sec)'), _('Action')));
 	$delay = count_operations_delay($this->data['action']['operations'], $this->data['action']['esc_period']);
 }
@@ -1032,7 +1034,7 @@ if (!empty($this->data['new_operation'])) {
 
 // append tabs to form
 $actionTabs = new CTabView();
-if (!isset($_REQUEST['form_refresh'])) {
+if (!hasRequest('form_refresh')) {
 	$actionTabs->setSelected(0);
 }
 $actionTabs->addTab('actionTab', _('Action'), $actionFormList);
